Game communication (visible) and minor fixes
WebSocket now using actual host instead of localhost, game rendering
uses two canvases.
Also made every script strict.

--- a/TunnelerOnline/public/stylesheets/style.css
+++ b/TunnelerOnline/public/stylesheets/style.css
@@ -12,5 +12,9 @@ nav a {
 }
 
 #gameCanvas {
+  display: none;
+}
+
+#frameCanvas {
   float: right;
 }
